# bevy-wasm

./: Cargo.toml  README.md
.cargo/: config.toml
client/: Cargo.toml
client/js/: foo.js
client/src/: main.rs
client/static/: .gitignore  client.js  index.html
client/static/snippets/client-cda1b8d006d10648/js/: foo.js
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
