[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0" # Dynamic linking not used due to lack of wasm support
gloo = "0.10.0"
rand = "0.8.5"
web-sys = { version = "0.3.65", features = [
    "Window",
    "Event",
    "KeyboardEvent",
] }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
