[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
# Dynamic linking not used due to lack of wasm support
bevy = "0.16.1"
rand = "0.9.2"
serde_json = "1.0.143"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Event",
    "KeyboardEvent",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
] }
uuid = "1.18.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
