[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
ws = { version = "0.9.2", features = ["ssl"] }
hyper-tungstenite = "0.12.0"
futures = "0.3.29"
bytes = "1.5.0"
rand = "0.8.5"
