[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.29"
bytes = "1.5.0"
rand = "0.8.5"
tokio-tungstenite = "0.20.1"
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
serde = { version = "1.0.193", features = ["derive"] }
