[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
bytes = "1.10.1"
rand = "0.9.2"
tokio-tungstenite = "0.27.0"
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
